[tool.poetry]
name = "group-role-user"
version = "0.1.0"
description = ""
authors = ["Sebastian Troisner <S.Troisner00@gmx.at>"]
readme = "README.md"
packages = [{include = "group_role_user"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
